--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@
    <a href="https://icp.gov.moe/?keyword=20259997" target="_blank">萌ICP备20259997号</a> 萌ICP备20259997号
 </div></div></div></div></div><script>window.__NUXT__={layout:"default",data:[{}],error:null,serverRendered:!0}</script><script src="/_nuxt/318bf53201c4127c79fc.js" defer></script><script src="/_nuxt/b46e75617207ae5013d0.js" defer></script><script src="/_nuxt/71ef7c30e68aba4a3fc9.js" defer></script><script src="/_nuxt/9e35552f648a5a6a3b24.js" defer></script><script src="/_nuxt/fbd198cfd0f4459e2725.js" defer></script>
   </body>
+  <a href="https://icp.gov.moe/?keyword=20259997" target="_blank">萌ICP备20259997号</a>
 </html>
